# qrcode-server-rs

./: .dockerignore  .gitignore  CONTEXT_PATH.md  Cargo.toml  Dockerfile  README.md  build.rs  build.sh  debug_container.sh  docker-compose.yml  nginx.conf
.github/workflows/: docker-build.yml
models/: detect.prototxt  sr.prototxt  wget-log
src/: main.rs  main_new.rs  main_old.rs
static/: camera_qr_scanner.html  index.html  index_new.html  index_old.html
test/: benchmark.py  concurrency_analysis.py  quick_ws_test.py  run_tests.py  simple_ws_test.py  test_corners.py  test_env_vars.py  test_websocket.py  timing_analysis.py  websocket_fps_test.py
