[package]
name = "qrcode-server-rs"
version = "0.1.4"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
opencv = { version = "0.92", default-features = false, features = ["imgproc", "imgcodecs", "objdetect", "dnn", "wechat_qrcode"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
object-pool = "0.5"
tokio-tungstenite = "0.21"
futures-util = "0.3"
